--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -1,3 +1,16 @@
 #profile-card {
     background-color: #ff6347
 }
+
+.fancy-header{
+    font-family: 'Raleway', sans-serif;
+    /*font-family: 'Roboto', sans-serif;  */
+}
+
+.comment{
+    font-family: 'Dosis', sans-serif;
+}
+
+.answer{
+    margin-bottom: 0;
+}
