--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" th:href="@{~/css/landingPage.css}">
     <link rel="stylesheet" th:href="@{~/css/dashboard.css}">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|PT+Sans+Narrow|Raleway|Roboto&display=swap" rel="stylesheet">
 
 
 
