--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -62,7 +62,7 @@
                         <input type="text" class="form-control" id="answer" th:field="*{answer}">
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-secondary">Save Edits</button>
+                        <button type="submit" class="btn btn-secondary">create post</button>
                         <input type="hidden" class="" id="postTypeId" name="postTypeId" value="1">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
@@ -99,9 +99,13 @@
                         </div>
                         <div class="modal-footer">
                             <button type="submit" class="btn btn-secondary">create post</button>
-                            <input type="hidden" class="" id="postTypeId" name="postTypeId" value="1">
+                            <input type="hidden" class="" id="postTypeId" name="postTypeId" value="2">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button class="button photo-upload" type="button" id="photo-picker">Upload Profile Image</button>
+                            <input type="hidden" class="" id="photo-upload" name="photoURL">
+                            <input type="submit" />
                         </div>
+
                     </form>
                 </div>
             </div>
@@ -135,7 +139,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="submit" class="btn btn-secondary">Create post</button>
-                            <input type="hidden" class="" id="postTypeId" name="postTypeId" value="1">
+                            <input type="hidden" class="" id="postTypeId" name="postTypeId" value="3">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         </div>
                     </form>
@@ -167,34 +171,35 @@
 <!--    Interview-->
         <div class="row">
                 <div class="col-sm">
-                    <h3>Most Recent Interview Questions</h3>
+                    <h3 class ="fancy-header">Most Recent Interview Questions</h3>
                     <hr>
                         <div th:each="post : ${interviewQuestionsList}">
                             <div th:id="'post-' + ${post.id}">
                                 <h4 th:text = "${post.title}"></h4>
 <!--                                <p th:text = "${post.dateTime}"></p>-->
                                 <p th:text = "${post.body}"></p>
+                                <p class="answer" >Answers:</p>
                                 <p th:text = "${post.answer}"></p>
                                 <p>Asked by: <span th:text="${post.user.username}"></span> On: <span th:text = "${post.dateTime}"></span>  </p>
                                 <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
                                     <img th:src="${post.imageURLList[0].url}" alt="post-image">
                             </div>
 
-                                <div sec:authorize = "isAuthenticated()">
-                                    <button class="upvote-button" th:id="'upvote-' + ${post.id}"><i class="fas fa-arrow-up"></i></button>
-                                    <br>
-                                    <button class="downvote-button" th:id="'downvote-' + ${post.id}"><i class="fas fa-arrow-down"></i></button>
+<!--                                <div sec:authorize = "isAuthenticated()">-->
+                                    <i class="upvote-button fas fa-arrow-up btn btn-link"  th:id="'upvote-' + ${post.id}"></i>
                                     <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>
+                                    <i class="downvote-button fas fa-arrow-down btn btn-link" th:id="'downvote-' + ${post.id}"></i>
+
                                 </div>
                                 <div th:each="comment : ${post.commentList}">
-                                    <p th:text = "${comment.body}"></p>
+                                    <p class="comment" > <span th:text = "${comment.body}"></span></p>
                                 </div>
                                 <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
-                                <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
+                                <button class="add-comment-button btn btn-secondary" th:id="'add-comment-button-' + ${post.id}">Comment</button>
                                     <div th:if="${user.id == post.user.id}">
                                         <a th:href="@{|/mentorship-posts/edit/${post.id}|}"><button>Edit my post</button></a>
                                         <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete my Post</button>
-                                    </div>
+<!--                                    </div>-->
                                 <hr>
                         </div>
                 </div>
@@ -202,13 +207,14 @@
             <!--    End Interview-->
             <!--    Mentorship-->
                 <div class="col-sm">
-                    <h3>Most Recent Mentorship Posts</h3>
+                    <h3 class ="fancy-header">Most Recent Mentorship Posts</h3>
                     <hr>
                     <div th:each="post : ${mentorshipPostsList}">
                         <div th:id="'post-' + ${post.id}">
                             <h4 th:text = "${post.title}"></h4>
                             <p th:text = "${post.dateTime}"></p>
                             <p th:text = "${post.body}"></p>
+                            <p class="answer" >Answers:</p>
                             <p th:text = "${post.answer}"></p>
                             <p th:text = "${post.user.username}"></p>
                             <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
@@ -236,13 +242,14 @@
 <!--    End Mentorship-->
 <!--    Job-->
                 <div class="col-sm">
-                    <h3>Most Recent Job Postings</h3>
+                    <h3 class ="fancy-header">Most Recent Job Postings</h3>
                     <hr>
                     <div th:each="post : ${jobPostingsList}">
                         <div th:id="'post-' + ${post.id}">
                             <h4 th:text = "${post.title}"></h4>
                             <p th:text = "${post.dateTime}"></p>
                             <p th:text = "${post.body}"></p>
+                            <p class="answer" >Answers:</p>
                             <p th:text = "${post.answer}"></p>
                             <p th:text = "${post.user.username}"></p>
                             <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
