--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -230,7 +230,7 @@
                                 <p th:text = "${comment.body}"></p>
                             </div>
                             <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
-                            <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
+                            <button class="add-comment-button btn btn-secondary" th:id="'add-comment-button-' + ${post.id}">Comment</button>
                             <div th:if="${user.id == post.user.id}">
                                 <a th:href="@{|/mentorship-posts/edit/${post.id}|}"><button>Edit Post</button></a>
                                 <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post</button>
@@ -265,7 +265,7 @@
                                 <p th:text = "${comment.body}"></p>
                             </div>
                             <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
-                            <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
+                            <button class="add-comment-button btn btn-secondary" th:id="'add-comment-button-' + ${post.id}">Comment</button>
                             <div th:if="${user.id == post.user.id}">
                                 <a th:href="@{|/mentorship-posts/edit/${post.id}|}"><button>Edit Post</button></a>
                                 <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post</button>
