--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -6,17 +6,17 @@ h1 {
     border: none !important;
     margin-right: 15% !important;
     margin-left: 15% !important;
+    background-color: #A9ACA9;
 }
 
 .register-box{
-    background-color: rgb(235, 235, 235);
     margin-top: 5%;
     box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
 }
 
 .box-box{
     margin-top: 2%;
-    background-color: rgb(235, 235, 235);;
+    background-color: #00727F;
     border: none !important;
     margin-left: 20%;
     margin-right: 20%;
@@ -28,8 +28,12 @@ h1 {
 }
 
 /*login page*/
+body{
+    background-color: #A9ACA9;
+}
+
 .login-frame{
-    background-color: #c4d5f2;
+    background-color: #00727F;
     padding: 1%;
     padding-left: -5%;
     margin-left: 25%;
