--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -108,7 +108,16 @@
                                     <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>
                                 </div>
                                 <div th:each="comment : ${post.commentList}">
-                                    <p th:text = "${comment.body}"></p>
+                                    <p th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
+                                    <div sec:authorize = "isAuthenticated()">
+                                        <div th:if="${user.id == comment.user.id}">
+                                            <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
+                                            <button class="edit-comment-button" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
+                                        </div>
+                                        <button class="upvote-comment-button" th:id="'upvote-comment-' + ${comment.id}">Upvote JS</button>
+                                        <button class="downvote-comment-button" th:id="'downvote-comment-' + ${comment.id}">Downvote JS</button>
+                                    </div>
+                                    <p>Comment Rating Total: <span th:text = "${comment.getRatingTotal()}"></span></p>
                                 </div>
                                 <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
                                 <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
@@ -142,7 +151,16 @@
                                 <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>
                             </div>
                             <div th:each="comment : ${post.commentList}">
-                                <p th:text = "${comment.body}"></p>
+                                <p th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
+                                <div sec:authorize = "isAuthenticated()">
+                                    <div th:if="${user.id == comment.user.id}">
+                                        <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
+                                        <button class="edit-comment-button" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
+                                    </div>
+                                    <button class="upvote-comment-button" th:id="'upvote-comment-' + ${comment.id}">Upvote JS</button>
+                                    <button class="downvote-comment-button" th:id="'downvote-comment-' + ${comment.id}">Downvote JS</button>
+                                </div>
+                                <p>Comment Rating Total: <span th:text = "${comment.getRatingTotal()}"></span></p>
                             </div>
                             <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
                             <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
@@ -176,7 +194,16 @@
                                 <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>
                             </div>
                             <div th:each="comment : ${post.commentList}">
-                                <p th:text = "${comment.body}"></p>
+                                <p th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
+                                <div sec:authorize = "isAuthenticated()">
+                                    <div th:if="${user.id == comment.user.id}">
+                                        <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
+                                        <button class="edit-comment-button" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
+                                    </div>
+                                    <button class="upvote-comment-button" th:id="'upvote-comment-' + ${comment.id}">Upvote JS</button>
+                                    <button class="downvote-comment-button" th:id="'downvote-comment-' + ${comment.id}">Downvote JS</button>
+                                </div>
+                                <p>Comment Rating Total: <span th:text = "${comment.getRatingTotal()}"></span></p>
                             </div>
                             <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
                             <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
