--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,8 @@
 the parallax will go -->
 
 <div style="height:1000px;background-color:steelblue;font-size:36px">
-some other stuff goes here
+    <!-- Scroll animations section -->
+    <h2 class="new-section">Scroll Animations</h2>
 </div>
 
 <div class="parallax"></div>
