--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -7,35 +7,72 @@
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
 <div class="row">
-    <h2>Metrics:</h2>
+    <h2 class="col-12 mx-auto">Metrics:</h2>
     <div class="col-2">
-        <p>Total users: </p>
+        <p th:text="'Total Users: ' + ${userCount}"></p>
+        <button class="btn btn-primary show-user-role-button" id="show-user" data-toggle="modal" data-target="#the-modal">Show All Users</button>
     </div>
     <div class="col-2">
-        <p th:text="'Users with Admin Role: ' + ${adminList.size()}"></p>
-        <button class="btn btn-primary show-user-role-button" id="show-admin">Show Admin Users</button>
+        <p th:text="'Deactivated Users: ' + ${deactivatedCount}"></p>
+        <button class="btn btn-primary show-user-role-button" id="show-deactivated" data-toggle="modal" data-target="#the-modal">Show Deactivated Users</button>
     </div>
     <div class="col-2">
-        <p th:text="'Users with Instructor Role: ' + ${instructorList.size()}"></p>
-        <button class="btn btn-primary show-user-role-button" id="show-instructor">Show Instructor Users</button>
+        <p th:text="'Users with Admin Role: ' + ${adminCount}"></p>
+        <button class="btn btn-primary show-user-role-button" id="show-admin" data-toggle="modal" data-target="#the-modal">Show Admin Users</button>
     </div>
     <div class="col-2">
-        <p th:text="'Users with Alum Role: ' + ${alumnusList.size()}"></p>
-        <button class="btn btn-primary show-user-role-button" id="show-alumnus">Show Alumnus Users</button>
+        <p th:text="'Users with Instructor Role: ' + ${instructorCount}"></p>
+        <button class="btn btn-primary show-user-role-button" id="show-instructor" data-toggle="modal" data-target="#the-modal">Show Instructor Users</button>
     </div>
     <div class="col-2">
-        <p th:text="'Users with Student Role: ' + ${studentList.size()}"></p>
-        <button class="btn btn-primary show-user-role-button" id="show-student">Show Student Users</button>
+        <p th:text="'Users with Alum Role: ' + ${alumnusCount}"></p>
+        <button class="btn btn-primary show-user-role-button" id="show-alumnus" data-toggle="modal" data-target="#the-modal">Show Alumnus Users</button>
     </div>
     <div class="col-2">
-        <p>Users awaiting activation: </p>
+        <p th:text="'Users with Student Role: ' + ${studentCount}"></p>
+        <button class="btn btn-primary show-user-role-button" id="show-student" data-toggle="modal" data-target="#the-modal">Show Student Users</button>
     </div>
 </div>
+<!-- Modal -->
+<div class="modal fade" id="all-users-modal" tabindex="-1" role="dialog" aria-labelledby="the-modal-title" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <!--                        Set this with JS-->
+                <h5 class="modal-title" id="the-modal-title"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="fill-modal-body">
 
-<div th:each="user : ${adminList}">
-    <h1 th:text = "${user.username}"></h1>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
 </div>
-
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
+<script>
+    document.querySelectorAll(".show-user-role-button").forEach(button => {
+        button.addEventListener("click", function() {
+            let fillThis = document.querySelector("#fill-modal-body");
+            let fillTitle = document.querySelector('#the-modal-title');
+            let userRole = this.getAttribute("id").split("-")[1];
+            fetch(`/admin/users/${userRole}`, {
+                method: 'GET'
+            })
+            .then(response => {
+                return response.json();
+            })
+            .then(res => {
+                fillTitle.innerText = `All ${userRole}`;
+                console.log(res);
+                return res;
+            })
+        })
+    })
+</script>
 </body>
 </html>
