--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -12,28 +12,7 @@
 <div class="card p-4 mt-5" id="profile-card">
     <h2 class="card-title text-center p-3 profile-header">Welcome to your profile, <span th:text="${user.username}">user</span>!
     </h2>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#inteviewModal">
-                Interview Questions Create
-            </button>
-            </div>
-            <div class="col-sm">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mentorshipModal">
-                    Mentorship Create
-                </button>
-<!--                <a th:href="@{|/mentorship-posts/create|}"><button class="btn btn-primary">Mentorship Create</button></a>-->
-            </div>
-            <div class="col-sm">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#jobsModal">
-                    Job Postings Create
-                </button>
-<!--                <a th:href="@{|/job-postings/create|}"><button class="btn btn-primary">Job Postings Create</button></a>-->
-            </div>
-        </div>
-    </div>
-</div><br><br>
+</div>
 
 
 <!--                    Interview Modal-->
@@ -150,66 +129,105 @@
 </div>
 
 <!--This is right above the questions create and takes you to the specific page-->
-<div class="container">
-        <div class="row">
-            <div class="col-4">
-                <a th:href="@{|/interview-questions/show|}"><button class="btn btn-primary">Interview Questions</button></a>
-<!--                <a th:href="@{|/interview-questions/create|}"><button class="btn btn-primary">Interview Create</button></a>-->
-            </div>
-            <div class="col-4">
-                <a th:href="@{|/mentorship-posts/show|}"><button class="btn btn-primary">Mentorship Posts</button></a>
-<!--                <a th:href="@{|/mentorship-posts/create|}"><button class="btn btn-primary">Mentorship Create</button></a>-->
-            </div>
-            <div class="col-4">
-                <a th:href="@{|/job-postings/show|}"><button class="btn btn-primary">Job Postings</button></a>
-<!--                <a th:href="@{|/job-postings/create|}"><button class="btn btn-primary">Job Postings Create</button></a>-->
-            </div>
-        </div>
-</div>
+<!--<div class="container">-->
+<!--        <div class="row">-->
+<!--            <div class="col-4">-->
+<!--                <a th:href="@{|/interview-questions/show|}"><button class="btn btn-primary">Interview Questions</button></a>-->
+<!--&lt;!&ndash;                <a th:href="@{|/interview-questions/create|}"><button class="btn btn-primary">Interview Create</button></a>&ndash;&gt;-->
+<!--            </div>-->
+
+<!--            <div class="col-4">-->
+<!--                <a th:href="@{|/mentorship-posts/show|}"><button class="btn btn-primary">Mentorship Posts</button></a>-->
+<!--&lt;!&ndash;                <a th:href="@{|/mentorship-posts/create|}"><button class="btn btn-primary">Mentorship Create</button></a>&ndash;&gt;-->
+<!--            </div>-->
+<!--            <div class="col-4">-->
+<!--                <a th:href="@{|/job-postings/show|}"><button class="btn btn-primary">Job Postings</button></a>-->
+<!--&lt;!&ndash;                <a th:href="@{|/job-postings/create|}"><button class="btn btn-primary">Job Postings Create</button></a>&ndash;&gt;-->
+<!--            </div>-->
+<!--        </div>-->
+<!--</div>-->
 
 <!--each of the columns are here for each type of questions-->
 <!--    Interview-->
-        <div class="row">
-                <div class="col-sm">
-                    <h3 class ="fancy-header">Most Recent Interview Questions</h3>
-                    <hr>
-                        <div th:each="post : ${interviewQuestionsList}">
-                            <div th:id="'post-' + ${post.id}">
-                                <h4 th:text = "${post.title}"></h4>
-<!--                                <p th:text = "${post.dateTime}"></p>-->
-                                <p th:text = "${post.body}"></p>
-                                <p class="answer" >Answers:</p>
-                                <p th:text = "${post.answer}"></p>
-                                <p>Asked by: <span th:text="${post.user.username}"></span> On: <span th:text = "${post.dateTime}"></span>  </p>
-                                <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
-                                    <img th:src="${post.imageURLList[0].url}" alt="post-image">
-                            </div>
 
-<!--                                <div sec:authorize = "isAuthenticated()">-->
-                                    <i class="upvote-button fas fa-arrow-up btn btn-link"  th:id="'upvote-' + ${post.id}"></i>
-                                    <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>
-                                    <i class="downvote-button fas fa-arrow-down btn btn-link" th:id="'downvote-' + ${post.id}"></i>
-
-                                </div>
-                                <div th:each="comment : ${post.commentList}">
-                                    <p class="comment" > <span th:text = "${comment.body}"></span></p>
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <h3 class="fancy-header">Most Recent Interview Questions</h3>
+        </div>
+        <div class="col-6">
+            <button type="button" class="btn btn-link" data-toggle="modal" data-target="#inteviewModal">
+                Interview Questions Create
+            </button>
+        </div>
+    </div>
+        <div class="card mb-2">
+            <div class="card-body">
+                <div th:each="post : ${interviewQuestionsList}">
+                    <div class="row">
+                        <div class="col-2">
+                            <i class="upvote-button fas fa-arrow-up btn btn-link"  th:id="'upvote-' + ${post.id}"></i>
+                            <p>  <span th:text = "${post.getRatingTotal()}"></span></p>
+                            <i class="downvote-button fas fa-arrow-down btn btn-link" th:id="'downvote-' + ${post.id}"></i>
+                        </div>
+                        <div class="col-10">
+                                <div th:id="'post-' + ${post.id}">
+                                    <h4 th:text = "${post.title}"></h4>
+                                    <p th:text = "${post.body}"></p>
+                                    <p class="answer" >Answers:</p>
+                                    <p th:text = "${post.answer}"></p>
+                                    <p class="m-r mb-0">Asked by: <span th:text="${post.user.username}"></span> On: <span th:text = "${post.dateTime}"></span>  </p>
+                                    <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
+                                        <img th:src="${post.imageURLList[0].url}" alt="post-image">
+                                    </div>
                                 </div>
                                 <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
-                                <button class="add-comment-button btn btn-secondary" th:id="'add-comment-button-' + ${post.id}">Comment</button>
-                                    <div th:if="${user.id == post.user.id}">
-                                        <a th:href="@{|/mentorship-posts/edit/${post.id}|}"><button>Edit my post</button></a>
-                                        <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete my Post</button>
-<!--                                    </div>-->
-                                <hr>
+                                <button class="add-comment-button btn btn-link" th:id="'add-comment-button-' + ${post.id}">Comment</button>
+                                <div th:each="comment : ${post.commentList}">
+                                <p class="comment mb-0" > <span th:text = "${comment.body}"></span></p>
+                                </div>
+                                <div th:if="${user.id == post.user.id}">
+                                    <a th:href="@{|/mentorship-posts/edit/${post.id}|}"><button>Edit my post</button></a>
+                                    <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete my Post</button>
+                                </div>
+
+                            <hr>
                         </div>
+                    </div>
                 </div>
+           </div>
         </div>
-            <!--    End Interview-->
-            <!--    Mentorship-->
-                <div class="col-sm">
-                    <h3 class ="fancy-header">Most Recent Mentorship Posts</h3>
+
+<!--    End Interview-->
+
+
+
+            <!--                <a th:href="@{|/mentorship-posts/create|}"><button class="btn btn-primary">Mentorship Create</button></a>-->
+
+
+            <!--                <a th:href="@{|/job-postings/create|}"><button class="btn btn-primary">Job Postings Create</button></a>-->
+
+
+<!--    Mentorship-->
+<div class="row">
+    <div class="col-6">
+        <h3 class ="fancy-header">Most Recent Mentorship Posts</h3>
+    </div>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#mentorshipModal">
+                Mentorship Create
+            </button>
+        </div>
+                <div class="col-9">
+
                     <hr>
                     <div th:each="post : ${mentorshipPostsList}">
+                        <div class="row">
+                        <div class="col-2">
+                            <i class="upvote-button fas fa-arrow-up btn btn-link"  th:id="'upvote-' + ${post.id}"></i>
+                            <p>  <span th:text = "${post.getRatingTotal()}"></span></p>
+                            <i class="downvote-button fas fa-arrow-down btn btn-link" th:id="'downvote-' + ${post.id}"></i>
+                        </div>
+                            <div class="col-10">
                         <div th:id="'post-' + ${post.id}">
                             <h4 th:text = "${post.title}"></h4>
                             <p th:text = "${post.dateTime}"></p>
@@ -220,12 +238,11 @@
                             <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
                                 <img th:src="${post.imageURLList[0].url}" alt="post-image">
                             </div>
-                            <div sec:authorize = "isAuthenticated()">
                                 <button class="upvote-button" th:id="'upvote-' + ${post.id}"><i class="fas fa-arrow-up"></i></button>
                                 <br>
                                 <button class="downvote-button" th:id="'downvote-' + ${post.id}"><i class="fas fa-arrow-down"></i></button>
                                 <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>
-                            </div>
+
                             <div th:each="comment : ${post.commentList}">
                                 <p th:text = "${comment.body}"></p>
                             </div>
@@ -237,11 +254,23 @@
                             </div>
                             <hr>
                         </div>
+                            </div>
+                        </div>
                      </div>
                 </div>
+
+
+
+
 <!--    End Mentorship-->
 <!--    Job-->
-                <div class="col-sm">
+<div class="row">
+    <div class="col-3">
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#jobsModal">
+        Job Postings Create
+    </button>
+    </div>
+                <div class="col-9">
                     <h3 class ="fancy-header">Most Recent Job Postings</h3>
                     <hr>
                     <div th:each="post : ${jobPostingsList}">
@@ -255,12 +284,10 @@
                             <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
                                 <img th:src="${post.imageURLList[0].url}" alt="post-image">
                             </div>
-                            <div sec:authorize = "isAuthenticated()">
                                 <button class="upvote-button" th:id="'upvote-' + ${post.id}"><i class="fas fa-arrow-up"></i></button>
                                 <br>
                                 <button class="downvote-button" th:id="'downvote-' + ${post.id}"><i class="fas fa-arrow-down"></i></button>
                                 <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>
-                            </div>
                             <div th:each="comment : ${post.commentList}">
                                 <p th:text = "${comment.body}"></p>
                             </div>
@@ -274,12 +301,12 @@
                         </div>
                     </div>
                 </div>
-    </div>
 
+</div>
 <!--    End Job-->
 
-
-
+        </div>
+</div>
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
 </body>
 </html>
