--- a/src/main/resources/templates/fragments/body-scripts.html
+++ b/src/main/resources/templates/fragments/body-scripts.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" th:src="@{~/js/keys.js}"></script>
     <script type="text/javascript" th:src="@{~/js/scripts.js}" th:inline="javascript"></script>
 
-<!--    <script src="https://kit.fontawesome.com/f868b57b2e.js" crossorigin="anonymous"></script>-->
+    <script src="https://kit.fontawesome.com/f868b57b2e.js" crossorigin="anonymous"></script>
 </th:block>
 </body>
 </html>
