--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -1,3 +1,6 @@
+body{
+    background-color: black;
+}
 
 .fancy-header{
     font-family: 'Raleway', sans-serif;
@@ -15,4 +18,12 @@
 .logo{
     font-family: 'Orbitron', sans-serif;
     color: #00727F;
+}
+
+.card-body{
+    background-color: white;
+}
+
+.back{
+    background-color: #95A3B3;
 }
