--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -5,15 +5,18 @@
     <head th:replace="fragments/header.html :: header(title = 'Profile')"></head>
     <title>Title</title>
 </head>
-<body>
+<body class ="back">
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
 
 <!--The profile card at the top of the page -->
-<div class="container">
+<!--<div class="container">-->
 <div class="jumbotron">
 <!--    <h2 class="card-title text-center p-3 profile-header">Welcome to your profile, <span th:text="${user.username}">user</span>!-->
         <h1 class="text-center logo" style="font-size: 12em">CodeOn</h1>
         <p>something great we can say about why to use codeon and how great the site is </p>
+    <button type="button" class="btn btn-link" data-toggle="modal" data-target="#inteviewModal">
+        Interview Questions Create
+    </button>
 </div>
 
 
@@ -153,17 +156,17 @@
 <!--    Interview-->
 
 
-    <div class="row">
+    <div class="row m-5">
         <div class="col-3">
-                        <div class="card text-center">
-                                        <div class="card-body">
-                                            <h3 class="fancy-header">Most Recent Interview Questions</h3>
-                                            <p class="card-text">This page is connect within the CodeOn community and help one another. Whether it be studying, collaborating, needing a mentor or just a place to see how others experiences were. The mentorship page is the place to start. </p>
-                                            <button type="button" class="btn btn-link" data-toggle="modal" data-target="#inteviewModal">
-                                                Interview Questions Create
-                                            </button>
-                                        </div>
-                        </div>
+            <div class="card text-center">
+                <div class="card-body">
+                    <h3 class="fancy-header">Most Recent Interview Questions</h3>
+                    <p class="card-text">This page is connect within the CodeOn community and help one another. Whether it be studying, collaborating, needing a mentor or just a place to see how others experiences were. The mentorship page is the place to start. </p>
+                    <button type="button" class="btn btn-link" data-toggle="modal" data-target="#inteviewModal">
+                        Interview Questions Create
+                    </button>
+                </div>
+            </div>
         </div>
         <div class="col-9">
                         <div class="card mb-2">
@@ -226,7 +229,7 @@
 
 
 <!--    Mentorship-->
-<div class="row">
+<div class="row m-5">
     <div class="col-3">
         <div class="card text-center">
             <div class="card-body">
@@ -292,7 +295,7 @@
 
 <!--    End Mentorship-->
 <!--    Job-->
-    <div class="row">
+    <div class="row m-5">
 <!--    side card and link to post to jobs-->
         <div class="col-3">
             <div class="card text-center">
@@ -355,7 +358,7 @@
 <!--    End Job-->
 
 <!--container div-->
-</div>
+<!--</div>-->
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
 </body>
 </html>
