--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,7 +17,8 @@
     <link rel="stylesheet" type="text/css" th:href="@{~/css/dashboard.css}">
     <link rel="stylesheet" type="text/css" th:href="@{~/css/index.css}">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Dosis|PT+Sans+Narrow|Raleway|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Dosis|PT+Sans+Narrow|Raleway|Roboto&display=swap" rel="stylesheet">
+
 
 
 
