--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,4 +1,112 @@
 
+/*changes upvote-downvote buttons*/
 .btn-link{
     color: #0c5460;
 }
+h1{
+    font-family: 'Montserrat', sans-serif;
+}
+
+
+
+/*parallax*/
+body, html {
+    height: 100%;
+}
+
+.parallax {
+    /* The image used */
+
+    background-image: url('/img/background-computer.jpg');
+
+
+    /* Full height */
+    height: 100%;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+@media only screen and (max-device-width: 1366px) {
+    .parallax {
+        background-attachment: scroll;
+    }
+}
+
+
+
+/*landing page*/
+.fancy-header{
+    font-family: 'Raleway', sans-serif;
+    /*font-family: 'Roboto', sans-serif;  */
+}
+
+.comment{
+    font-family: 'Dosis', sans-serif;
+}
+
+.answer{
+    margin-bottom: 0;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.logo{
+    font-family: 'Orbitron', sans-serif;
+    color: #00727F;
+}
+
+.card-body{
+    background-color: white;
+}
+
+.back{
+    background-color: #95A3B3;
+}
+
+
+
+/*this is the video portion*/
+#logo{
+    font-family: 'Orbitron', sans-serif;
+    color: #A9ACA9;
+    opacity: 0.25;
+}
+
+
+/*might need to make som adjustments to this but still early*/
+header {
+    position: relative;
+    height: 100vh;
+    min-height: 25rem;
+    overflow: hidden;
+}
+video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: 100vh;
+    z-index: 0;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+}
+.container {
+    position: relative;
+    z-index: 2;
+}
+/*header .overlay {*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    height: 100%;*/
+/*    width: 100%;*/
+/*    background-color: black;*/
+/*    !*opacity: 0.5;*!*/
+/*    z-index: 1;*/
+/*}*/
