font awesome script is supposed to be in head. it is now. it was loading style sheets in body. the dashboard doesn't lurch anymore with upvotes and downvotes. also. chat inbox functionality works. needs style love

--- a/src/main/resources/templates/chat/inbox.html
+++ b/src/main/resources/templates/chat/inbox.html
@@ -36,42 +36,67 @@
 
         const inbox = talkSession.createInbox();
         inbox.mount(document.getElementById("talkjs-container"));
-
-    });
-</script>
-<script>
-    function attachChatEventListeners() {
-        document.querySelector("#new-chat-button").addEventListener("click", function (e) {
-            e.preventDefault();
-            document.querySelector(`#new-chat-div`).innerHTML = `<input type="text" id="chat-user-search-input" name="username" placeholder="Search by username"><button class="chat-user-search-button" id="chat-user-search-button">Search.</button>`;
-            document.querySelector(`#chat-user-search-button`).addEventListener("click", function (e) {
-                e.preventDefault();
-                let username = document.querySelector(`#chat-user-search-input`).value;
-                fetch(`/chat?username=${username}`, {
-                    method: 'GET',
-                    headers: {
-                        'X-CSRF-TOKEN': token
-                    }
-                })
-                    .then(response => {
-                        return response.json();
-                    })
-                    .then(response => {
-                        console.log(response);
-                        let newDivHTML = `<p>Search Results:</p>`;
-                        for(let i = 1; i < response.length; i++) {
-                            newDivHTML += `<p>Username: ${response[i].username}</p><button class="chat-with-button" id="chat-with-${response[i].username}">Chat</button>`;
+        function attachChatWithEventListener(response) {
+            document.querySelectorAll(".chat-with-button").forEach(button => {
+                button.addEventListener("click", function(e) {
+                    e.preventDefault();
+                    let otherId = this.getAttribute("id").split("-")[2];
+                    let otherUserObj = {};
+                    for(let i = 1; i < response.length; i++) {
+                        if(response[i].id == otherId) {
+                            otherUserObj.id = response[i].id;
+                            otherUserObj.name = response[i].username;
+                            otherUserObj.email = response[i].email;
                         }
-                        let newDiv = document.createElement("div").innerHTML = newDivHTML;
-                        this.style.display = "none";
-                        document.querySelector("#chat-user-search-input").style.display = "none";
-                        this.parentElement.innerHTML = this.parentElement.innerHTML + newDiv;
-                        attachChatEventListeners();
-                    })
+                    }
+                    const other = new Talk.User(otherUserObj);
+                    const conversation = talkSession.getOrCreateConversation(Talk.oneOnOneId(me, other))
+                    conversation.setParticipant(me);
+                    conversation.setParticipant(other);
+                    const newInbox = talkSession.createInbox({selected: conversation});
+                    newInbox.mount(document.getElementById("talkjs-container"));
+                    setTimeout(function() {
+                        document.querySelector("#new-chat-div").innerHTML = "";
+                    }, 1000)
+                })
             })
-        })
-    }
-    attachChatEventListeners();
+        }
+        function attachChatEventListeners() {
+            document.querySelector("#new-chat-button").addEventListener("click", function (e) {
+                e.preventDefault();
+                document.querySelector(`#new-chat-div`).innerHTML = `<input type="text" id="chat-user-search-input" name="username" placeholder="Search by username"><button class="chat-user-search-button" id="chat-user-search-button">Search.</button>`;
+                document.querySelector(`#chat-user-search-button`).addEventListener("click", function (e) {
+                    e.preventDefault();
+                    let username = document.querySelector(`#chat-user-search-input`).value;
+                    fetch(`/chat?username=${username}`, {
+                        method: 'GET',
+                        headers: {
+                            'X-CSRF-TOKEN': token
+                        }
+                    })
+                        .then(response => {
+                            return response.json();
+                        })
+                        .then(response => {
+                            let newDivHTML = `<p>Search Results:</p>`;
+                            for(let i = 1; i < response.length; i++) {
+                                newDivHTML += `<p>Username: ${response[i].username}</p><button class="chat-with-button" id="chat-with-${response[i].id}">Chat</button>`;
+                            }
+                            let newDiv = document.createElement("div").innerHTML = newDivHTML;
+                            this.style.display = "none";
+                            document.querySelector("#chat-user-search-input").style.display = "none";
+                            this.parentElement.innerHTML = this.parentElement.innerHTML + newDiv;
+                            attachChatEventListeners();
+                            return response;
+                        })
+                        .then(response => {
+                            attachChatWithEventListener(response);
+                        })
+                })
+            })
+        }
+        attachChatEventListeners();
+    });
 </script>
 </body>
 </html>
