--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,6 @@
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 <!--    <script defer type="text/javascript" th:src="@{~/js/all.min.js}"></script>-->
-
     <!-- include stylesheets, etc here -->
     <link rel="stylesheet" type="text/css" th:href="@{~/css/bootstrap.min.css}">
 <!--    <link rel="stylesheet" type="text/css" th:href="@{~/css/all.min.css}">-->
@@ -15,12 +14,9 @@
     <link rel="stylesheet" type="text/css" th:href="@{~/css/register.css}">
     <link rel="stylesheet" type="text/css" th:href="@{~/css/landingPage.css}">
     <link rel="stylesheet" type="text/css" th:href="@{~/css/dashboard.css}">
-
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dosis|PT+Sans+Narrow|Raleway|Roboto&display=swap" rel="stylesheet">
-
-
-
+    <script src="https://kit.fontawesome.com/f868b57b2e.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
