--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,49 +3,88 @@
 <head th:replace="fragments/header.html :: header(title = 'Codeon')"></head>
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
-<header class="d-none d-lg-block">
-    <video autoplay="autoplay" muted="muted" loop="loop">
-        <source src="https://www.videvo.net/videvo_files/converted/2016_04/preview/160330_1_Typing1_Mpeg4_4K.mov32174.webm" type="video/webm">
-    </video>
-    <div class="container h-100">
-        <div class="d-flex h-100 text-center align-items-center">
-            <div class="w-100 text-white">
-                <h1 class="display-3" id ="logo" style="font-size: 12em">CodeOn</h1>
-                <p>something great we can say about why to use codeon and how great the site is </p>
+<!--<header class="d-none d-lg-block">-->
+<!--        <img src="/img/background-computer.jpg" type="video/webm">-->
+<!--    <div class="container h-100">-->
+<!--        <div class="d-flex h-100 text-center align-items-center">-->
+<!--            <div class="w-100 text-white">-->
+<!--                <h1 class="display-3" id ="logo" style="font-size: 12em">CodeOn</h1>-->
+<!--                <p>something great we can say about why to use codeon and how great the site is </p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</header>-->
 
+<header class="d-none d-lg-block">
+        <div  id="myVideo">
+                <img src="/img/background-computer.jpg" type="video/webm">
+        </div>
+                    <div class="d-flex h-100 text-center align-items-center">
+                        <div class="w-100 text-white">
+                            <h1 class="display-3" id ="logo" style="font-size: 12em">CodeOn</h1>
+                            <p>something great we can say about why to use codeon and how great the site is </p>
+                        </div>
+                    </div>
+        </header>
+
+
+
+
+
+<div class="parallax">
+    <h2 class="title2">Where developers help other developers</h2>
+</div>
+<!--this is the page the will see when they get to CodeOn.com this is where
+the parallax will go -->
+<div class="container mt-5 mb-5">
+
+    <div class="row">
+        <div class="col-xs-12 col-md-4 mb-1">
+        <div class="card shadow p-3 mb-5 bg-white rounded">
+            <div class="embed-responsive embed-responsive-4by3">
+                                    <img src="/img/whiteboard-card.jpg" class="card-img-top embed-responsive-item" alt="...">
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Whiteboard</h5>
+                <p class="card-text">We all deal with the anxiety of interviewing and the thought of whiteboarding. We here at CodeOn have came up with an enviroment to practice and sharpen those skills that we have developed at bootcamp</p>
+                <a href="#" class="btn btn-link">Learn More</a>
             </div>
         </div>
     </div>
-</header>
-<div class="parallax"></div>
-<!--this is the page the will see when they get to CodeOn.com this is where
-the parallax will go -->
+        <div class="col-xs-12 col-md-4 mb-1">
+            <div class="card shadow p-3 mb-5 bg-white rounded">
+                <div class="embed-responsive embed-responsive-4by3">
+                                        <img src="/img/interview-card.jpg" class="card-img-top embed-responsive-item" alt="...">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Interviews </h5>
+                    <p class="card-text">With an abundant number of resource on the internet, searching for the type or interview quetions you will be asked can be daunting. Here at CodeOn you have insight from fellow developers to help you land tha job.</p>
+                    <a href="#" class="btn btn-link">Learn More</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-md-4 mb-1">
+            <div class="card shadow p-3 mb-5 bg-white rounded">
+                <div class="embed-responsive embed-responsive-4by3">
+                                        <img src="/img/mentorship-card.jpg" class="card-img-top embed-responsive-item" alt="...">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Mentorship</h5>
+                    <p class="card-text">Mentorship is the key to extraordinary success. CodeOn has developed a user community to meet that mentor and flourish as a developer. Here you can connect with fellow alumni and and pay it forward.</p>
+                    <a href="#" class="btn btn-link">Learn More</a>
+                </div>
+            </div>
+        </div>
 
-<div style="height:1000px;background-color:steelblue;font-size:36px">
-    <!-- Scroll animations section -->
-    <h2 class="new-section">Scroll Animations</h2>
+
+</div>
 </div>
 
-<div class="parallax"></div>
-<!--<nav th:replace="fragments/navbar.html :: navbar"></nav>-->
-<!--Interview Questions:-->
-<!--<a th:href="@{|/interview-questions/show|}"><button>Interview Questions</button></a>-->
-<!--<a th:href="@{|/interview-questions/create|}"><button>Interview Create</button></a>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--Mentorship Posts:-->
-<!--<a th:href="@{|/mentorship-posts/show|}"><button>Mentorship Posts</button></a>-->
-<!--<a th:href="@{|/mentorship-posts/create|}"><button>Mentorship Create</button></a>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--Job Postings:-->
-<!--<a th:href="@{|/job-postings/show|}"><button>Job Postings</button></a>-->
-<!--<a th:href="@{|/job-postings/create|}"><button>Job Postings Create</button></a>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
+
+<div class="parallax2">
+
+    <h1>Stay connected to the other developers  and sharpen your skills  at CodeOn</h1>
+</div>
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
 </body>
 </html>
