works. adding talkjs and user to model in each controller

--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
-<meta charset="UTF-8">
-<head th:replace="fragments/header.html :: header(title = 'Admin Dashboard')"></head>
-<title>Title</title>
+<head>
+    <th:block th:include="fragments/header.html :: header(title = 'Admin Dashboard')"/>
+    <meta class="talkJSAppId" th:content="${talkJSAppId}"/>
 </head>
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
@@ -53,7 +53,9 @@
         </div>
     </div>
 </div>
+<div th:replace="fragments/chat-box.html :: chat-box"></div>
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
+<div th:replace="fragments/chat-scripts.html :: chat-scripts"></div>
 <script>
     document.querySelectorAll(".show-user-role-button").forEach(button => {
         button.addEventListener("click", function() {
@@ -85,5 +87,6 @@
         })
     })
 </script>
+
 </body>
 </html>
