--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -53,6 +53,10 @@
         </div>
     </div>
 </div>
+<head>
+    <th:block th:include="fragments/header.html :: header(title = 'Admin Dashboard')"/>
+    <meta class="talkJSAppId" th:content="${talkJSAppId}"/>
+</head>
 <div th:replace="fragments/chat-box.html :: chat-box"></div>
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
 <div th:replace="fragments/chat-scripts.html :: chat-scripts"></div>
