--- a/src/main/resources/templates/comments/create.html
+++ b/src/main/resources/templates/comments/create.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header.html :: header(title = 'Create a Post')"></head>
+<head>
+    <th:block th:include="fragments/header.html :: header(title = 'Admin Dashboard')"/>
+    <meta class="talkJSAppId" th:content="${talkJSAppId}"/>
+</head>
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
 <form th:action="@{|/comments/create/${post.id}|}" th:method="post" th:object="${postComment}">
@@ -9,6 +12,8 @@
     <br />
     <input type="submit" />
 </form>
+<div th:replace="fragments/chat-box.html :: chat-box"></div>
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
+<div th:replace="fragments/chat-scripts.html :: chat-scripts"></div>
 </body>
 </html>
