--- a/src/main/resources/templates/comments/edit.html
+++ b/src/main/resources/templates/comments/edit.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header.html :: header(title = 'Edit Post')"></head>
+<head>
+    <th:block th:include="fragments/header.html :: header(title = 'Edit Comment')"/>
+    <meta class="talkJSAppId" th:content="${talkJSAppId}"/>
+</head>
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
 <form th:action="@{|/posts/${post.id}/edit|}" th:method="post" th:object="${post}">
@@ -12,7 +15,9 @@
     <br />
     <input type="submit" />
 </form>
+<div th:replace="fragments/chat-box.html :: chat-box"></div>
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
+<div th:replace="fragments/chat-scripts.html :: chat-scripts"></div>
 </body>
 </html>
 
