--- a/src/main/resources/templates/mentorship-posts/show.html
+++ b/src/main/resources/templates/mentorship-posts/show.html
@@ -4,7 +4,19 @@
 <body class="back">
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
 
+<div class="container profile-container">
 
+    <!--    PROFILE CARD    -->
+    <div class="card p-5 mt-5 blue-font" id="profile-card">
+        <h2 class="card-title text-center p-3 profile-header">Mentorship</h2>
+        <div class="card-text media">
+
+        </div>
+
+        <p class="align-self-end profile-btns">
+<!--                maybe add some buttons to the front-->
+        </p>
+    </div><br><br>
 
 
 <div class="container">
