--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -35,7 +35,22 @@ body, html {
     }
 }
 
+#index-login, #index-register {
+    width: 150px;
+    height: 40px;
+    color: #E3E7D3;
+    font-size: 20px;
+    border: 2px solid #E3E7D3;
+    border-radius: 3px;
+    background-color: #0f6674;
+    margin: 15px 30px;
+    padding-top: 3px;
+    padding-bottom: 35px;
+}
 
+a:hover {
+    text-decoration: none;
+}
 
 /*landing page*/
 .fancy-header{
@@ -70,8 +85,8 @@ body, html {
 /*this is the video portion*/
 #logo{
     font-family: 'Orbitron', sans-serif;
-    color: #A9ACA9;
-    opacity: 0.25;
+    color: #0f6674;
+    opacity: 0.95;
 }
 
 
