complete and tested. needs a second independent check before merge. every template that requires and authenticated user and every get method has been changed.

--- a/src/main/resources/templates/mentorship-posts/create.html
+++ b/src/main/resources/templates/mentorship-posts/create.html
@@ -3,6 +3,7 @@
 <head>
     <th:block th:include="fragments/header.html :: header(title = 'Create Mentorship Post')"/>
     <meta class="filestackKey" th:content="${filestackKey}"/>
+    <meta class="talkJSAppId" th:content="${talkJSAppId}"/>
 </head>
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
@@ -20,6 +21,8 @@
     <input type="hidden" class="" id="photo-upload" name="photoURL">
     <input type="submit" />
 </form>
+<div th:replace="fragments/chat-box.html :: chat-box"></div>
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
+<div th:replace="fragments/chat-scripts.html :: chat-scripts"></div>
 </body>
 </html>
