--- a/src/main/resources/templates/whiteboard/whiteboard.html
+++ b/src/main/resources/templates/whiteboard/whiteboard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <th:block th:include="fragments/header.html :: header(title = 'Whiteboard')"/>
     <meta class="firebaseKey" th:content="${firebaseKey}"/>
+    <meta class="talkJSAppId" th:content="${talkJSAppId}"/>
     <title>Whiteboard</title>
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/5.5.4/firebase.js"></script>
@@ -120,6 +121,9 @@
 
 
 </script>
+<div th:replace="fragments/chat-box.html :: chat-box"></div>
+<div th:replace="fragments/body-scripts.html :: body-scripts"></div>
+<div th:replace="fragments/chat-scripts.html :: chat-scripts"></div>
 </body>
 </html>
 
